# chartcheck

./: .gitignore  README.md  pyproject.toml
chartcheck/: __init__.py  backends.py  calibrate.py  core.py  deterministic.py  failuremodes.py  io_utils.py  results.py  rubric.py
examples/: calibrate_demo.py  meta_eval_demo.py  quickstart.py
examples/data/: record.txt  summary_flawed.txt  summary_good.txt
tests/: test_chartcheck.py
