[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chartcheck"
version = "0.1.0"
description = "Auditable, omission-aware evaluation of clinical AI text against the source record."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sanjay Basu" }]
keywords = ["clinical-ai", "llm-evaluation", "pdsqi-9", "faithfulness", "hallucination", "healthcare"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []  # core runs with the standard library only

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sanjaybasu/chartcheck"

[tool.setuptools.packages.find]
include = ["chartcheck*"]
